Implemented initial webhook->sns handler

--- a/s-project.json
+++ b/s-project.json
@@ -3,7 +3,6 @@
   "custom": {},
   "plugins": [
     "serverless-cors-plugin",
-    "serverless-optimizer-plugin",
-    "serverless-mocha-plugin"
+    "serverless-optimizer-plugin"
   ]
 }
